[package]
name = "sqlx-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
sea-query = { version = "0.26", features = [
    "sqlx-sqlite",
    "backend-sqlite",
    "derive",
    "thread-safe"
] }
log = "0.4"
